# MPointer

./: CMakeLists.txt  MPointer.files  MPointer.h  MPointer.includes  Unsaved Document 1  main.cpp
Listas/: ListaGC.cpp  ListaGC.h  ListaSimple.cpp  ListaSimple.h  listadoble.h
MPointerGC/: MPointerGC.cpp  MPointerGC.h
MPointerQT/MPointerQT/: MPointerQT.pro  main.cpp
MPointerQT/build-MPointerQT-Desktop_Qt_5_11_1_GCC_64bit-Debug/: MPointerQT  Makefile
MServidor/: CMakeLists.txt
MServidor/Server/: JSONMaker.cpp  JSONMaker.h  MapNode.cpp  MapNode.h  Memoria.cpp  Memoria.h  Server.cpp  Server.h
src/: Dato.cpp  Dato.h  MPointer.h
src/Listas/: ListaDoble.h  ListaGC.h
src/MPointerGC/: MPointerGC.cpp  MPointerGC.h
src/Ordenamientos/: InsertionSort.cpp  InsertionSort.h  Sorts.cpp  Sorts.h
src/Server/: JSONMakerClient.cpp  JSONMakerClient.h  MCliente.cpp  MCliente.h
src/server/: MCliente.cpp  MServidor.cpp  MServidor.h
